# MAD

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/: jupyter_lab_cfg.py
mad/: detection.py  simulation.py
mad/configs/: CONFIGS.MD  cruise_missiles_cfg.py  planets_cfg.py  satellites_cfg.py  warheads_cfg.py
mad/guidances/: GUIDANCES.MD  ICBM_guidances.py  __init__.py  base_guidances.py  satellite_guidances.py
mad/objs/: OBJECTS.MD  __init__.py  base.py  battle_computers.py  cruise_missiles.py  launchers.py  planets.py  projectiles.py  radars.py  rockets.py  satellites.py
mad/scripts/: ranges_cfgs.py  tabulate_ballistic_range.py
mad/tables/: B53_warhead.csv  B53_warhead_-90_90.csv  rock_no_drag.csv
mad/utils/: ballistic_tables.py  plotters.py
notebooks/: test_cruise_missiles.ipynb  test_interceptors.ipynb  test_lambert.ipynb  test_movables.ipynb  test_radars.ipynb  test_satellite.ipynb  test_switchable_guidances.ipynb  tests_ballistic_tables.ipynb  tests_missiles.ipynb  tests_planets.ipynb  tests_projectile.ipynb
scripts/: check.sh  tabulate_ballistic_range.py
src/: main.py  simulation.py  utils.py
src/mad/: __main__.py  detection.py  logger.py  main.py  simulation.py  utils.py
src/notebooks/: tests_objs.ipynb
src/objs/: common_schemas.py  constants.py  missiles.py  (+2 more)
tables/: titan_stage_2_table.csv
tests/: test_base.py  test_launchers_and_battle_computers.py  test_missiles.py  test_planets.py  test_projectiles.py  test_radars.py  test_rockets.py
(+47 files in other folders)
