[project]
name = "MAD"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "loguru",
    "lamberthub",
    "tqdm>=4.67.3",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
]

[tool.setuptools.packages.find]
include = ["mad*"]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pyrefly",
    "pytest",
    "jupyterlab",
    "ipykernel"
]

[tool.uv]
package = true

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pyrefly]
exclude = [
    "**/*.ipynb",
]
